	  function is_valid_mbstring(); changes to is_alnum_mbchar(),
	  is_blank_char() (renamed nisblank()), is_blank_mbchar(),
	  is_blank_wchar() (renamed niswblank()), is_cntrl_wchar(),
	  control_rep(), control_mbrep(), make_mbstring() (renamed
	  make_valid_mbstring()), mbstrncasecmp(), mbstrcasestr(),
	  mbrevstrcasestr(), etc.; removal of is_alnum_char() and
	  is_alnum_wchar(). (DLR)
	- Implement word count via Meta-D at the main window.  Note that
	  this is disabled when NANO_SMALL is defined.  New functions
	  do_word_count() and do_next_word_void(); changes to
	  shortcut_init() and do_next_word(). (DLR)
	- Detect words more accurately by taking punctuation into
	  account, and convert all word-detecting functions to use the
	  same wrapper function for ease of maintenance.  Changes to
	  is_alnum_mbchar() (renamed is_word_mbchar()); changes to
	  do_next_word(), do_prev_word(), is_whole_word(),
	  do_statusbar_next_word(), and do_statusbar_prev_word(). (DLR)
- chars.c:
  make_mbstring()
	- Change erroneous ENABLE_EXTRA #ifdef to NANO_EXTRA to fix a
	  compilation problem when --enable-nanorc isn't used and
	  --enable-extra is. (DLR)
- cut.c:
  cut_line()
	- Set placewewant properly after cutting a line, to avoid a
	  problem where the screen won't be updated if (a) we're not on
	  the first page when we cut the line, and (b) immediately after
	  we cut the line, we hit End to move to the end of the line
	  after it. (DLR)
- files.c:
  read_line()
	- Rename variable prev to prevnode to avoid confusion. (DLR)
  load_open_file()
	- Remove an unneeded clearok(FALSE). (DLR)
  get_next_filename()
	- Use an unsigned long instead of an int for the number
	  prepended to the filename. (DLR)
  do_insertfile()
	- Set i to 0 when we get a filename via the file browser, so
	  that it's read in properly when we exit the file browser.
	  (DLR)
  write_file()
	- Since lineswritten is a size_t, print its value as an unsigned
	  long instead of an unsigned int. (DLR)